unpackaged/main/default/objects/SOW__c/SOW__c.object-meta.xml
<CustomObject>
    <description>To track and manage Statement of Work documents for the PSA Team</description>
    <label>SOW</label>
    <nameField>
        <displayFormat>SOW-{00000}</displayFormat>
        <label>SOW Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SOWs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>