unpackaged/main/default/objects/SOW__c/fields/Can_SOW_be_shared_with_the_customer__c.field-meta.xml
<CustomField>
    <fullName>Can_SOW_be_shared_with_the_customer__c</fullName>
    <description>ADO 42263</description>
    <label>Can SOW be shared with the customer?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>