unpackaged/main/default/objects/SOW__c/fields/Is_Contract_Labor_Prohibited__c.field-meta.xml
<CustomField>
    <fullName>Is_Contract_Labor_Prohibited__c</fullName>
    <description>ADO 42263</description>
    <inlineHelpText>Do we have an Agreement with the Customer that prohibits the use of subcontractors for delivering the engagement?</inlineHelpText>
    <label>Is Contract Labor Prohibited?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>