unpackaged/main/default/objects/SOW__c/fields/Is_The_Estimation_Attached__c.field-meta.xml
<CustomField>
    <fullName>Is_The_Estimation_Attached__c</fullName>
    <description>ADO 42263</description>
    <inlineHelpText>Please attach the estimation document to the Notes and Attachment section if this is a Milestone Project.</inlineHelpText>
    <label>Is The Estimation Attached?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>