unpackaged/main/default/objects/SOW__c/fields/Is_This_A_Milestone_Project__c.field-meta.xml
<CustomField>
    <fullName>Is_This_A_Milestone_Project__c</fullName>
    <description>ADO 42263</description>
    <label>Is This A Milestone Project?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>