unpackaged/main/default/objects/SOW__c/fields/Opp_SOW_Status__c.field-meta.xml
<CustomField>
    <fullName>Opp_SOW_Status__c</fullName>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <formula>TEXT( Opportunity__r.SOW_Status__c )</formula>
    <inlineHelpText>To update this field, please go to the Opportunity record and update "SOW Status" field there.</inlineHelpText>
    <label>Opp SOW Status</label>
    <type>Text</type>
</CustomField>