unpackaged/main/default/objects/SOW__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <label>Project</label>
    <referenceTo>pse__Proj__c</referenceTo>
    <relationshipLabel>SOWs</relationshipLabel>
    <relationshipName>SOWs</relationshipName>
    <type>Lookup</type>
</CustomField>