unpackaged/main/default/objects/SOW__c/fields/PSA_Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>PSA_Legacy_ID__c</fullName>
    <description>This field is created for linkage from old records to new, to support migration/ETL activities.</description>
    <label>PSA Legacy ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>