unpackaged/main/default/objects/SOW__c/fields/SOW_Description__c.field-meta.xml
<CustomField>
    <fullName>SOW_Description__c</fullName>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <label>SOW Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>