unpackaged/main/default/objects/SOW__c/fields/SOW_Summary__c.field-meta.xml
<CustomField>
    <fullName>SOW_Summary__c</fullName>
    <description>ADO 42263</description>
    <inlineHelpText>A Summary of the SOW is required if it cannot be shared with the Customer. Please attach your Summary in the Notes &amp; Attachment Section and then select "Yes".</inlineHelpText>
    <label>Is SOW Summary For Customer Attached?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>