unpackaged/main/default/objects/SOW__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_The_Estimation_Attached__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <label>All</label>
</ListView>